--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="nomTournee">Nom de la tournée</string>
     <string name="coordonnes_en_cours_d_aquisitions">Coordonées en cours d\'aquisitions ...</string>
     <string name="save">Demarrer service</string>
+    <string name="status_gps">Position en cours d\'acquisition</string>
 </resources>
