--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="coordonnes_en_cours_d_aquisitions">Coordonées en cours d\'aquisitions ...</string>
     <string name="save">Demarrer service</string>
     <string name="status_gps">Position en cours d\'acquisition</string>
+    <string name="annuler">Annuler</string>
+    <string name="demarrer_service">Demarrer Service</string>
+    <string name="recherche_position">Recherche position</string>
 </resources>
