--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="demarrer_service">Demarrer Service</string>
     <string name="recherche_position">Synchroniser position</string>
     <string name="btn_annuler">CANCEL</string>
+    <string name="haut_le_pieds">HLP</string>
+    <string name="uni_lateral_droit">U-LAT</string>
+    <string name="bi_lateral">BI-LAT</string>
+    <string name="marche_arriere">M-A</string>
+    <string name="init_status_gps">BOM GPS</string>
+    <string name="tirets">--</string>
+    <string name="stop">Stop</string>
+    <string name="record">Rec</string>
+    <string name="delta_metre">Delta mètre(s)</string>
+    <string name="delta_seconde">Delta seconde(s)</string>
 </resources>
