Alert Box Si un fichier existe déjà.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="recording">! . Recording . !</string>
     <string name="cap">Cap: </string>
     <string name="precision">Precision:</string>
+    <string name ="annuler">ANNULER</string>
 </resources>
