--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">Service BOM</string>
+    <string name="app_name">SERVICE BOM</string>
+    <string name="by_plectre">by Plectre</string>
+    <string name="version">2.2</string>
+    <string name="circuit">Type de circuit</string>
     <string name="btn_save">SAUVGARDER</string>
     <string name="status_gps">Position en cours d\'acquisition</string>
     <string name="demarrer_service">Demarrer Service</string>
@@ -15,13 +18,18 @@
     <string name="record">Rec</string>
     <string name="km_h">KM/H</string>
     <string name="concat_km_h">%d km/h</string>
+    <string name="hyper_urbain">Hyper Urbain</string>
+    <string name="urbain">Urbain</string>
+    <string name="rural">Rural</string>
+    <string name="hyper_rural">Hyper Rural</string>
     <string name="delta_seconde">Temps seconde</string>
     <string name="recording">! . Recording . !</string>
-    <string name="cap">Cap: </string>
-    <string name="precision">Precision:</string>
     <string name ="annuler">ANNULER</string>
     <string name="alert_message">Suivi de collecte terminé ?</string>
     <string name="alert_title">Arrêter le suivi</string>
     <string name="no">NON</string>
     <string name="yes">OUI</string>
+    <string name="precision">- Precision -</string>
+    <string name="cap">- Cap -</string>
+    <string name="poi">poi</string>
 </resources>
